2014-10-30  Ola Jeppsson  <ola@adapteva.com>
	* dma/dma_2d/test.sh:
	* dma/dma_interrupt/test.sh:
	* dma/dma_message_read/test.sh:
	* dma/dma_message_write/test.sh:
	* dma/dma_slave/test.sh:
	Fix path problems


2014-10-29  Ola Jeppsson  <ola@adapteva.com>
	* dma/dma_slave/src/e_dma_slave_test.c:
	* dma/dma_slave/src/e_dma_slave_test1.c:
	Reset DMA engines on init.
	* dma/dma_slave/src/dma_slave_test.c:
	Tell transmitter the coordinate of the receiver core before
	starting it
	* emesh/emesh_bandwidth_all2one/test.sh:
	Fix path problems.
	* apps/fft2d/host/Release/matprt.m:
	Don't track.


2014-10-22  Ola Jeppsson  <ola@adapteva.com>
	* Many 'test.sh' and a few 'run.sh':
	Return example's exit code
	* scripts/build_and_test_all.sh:
	Limit built examples to current working directory


2014-10-20  Ola Jeppsson  <ola@adapteva.com>
	* scripts/build_and_test_all.sh:
	Yet another build/test script. This one seems to find more
	examples to build than the others, but its test failure
	detection is probably worse.


2014-10-20  Ola Jeppsson  <ola@adapteva.com>
	* apps/shm_test/src/shm_test.c:
	* emesh/emesh_bandwidth_all2one/src/mesh_one.c:
	* emesh/emesh_traffic/src/mesh_traffic.c:
	* io/link_lowpower_mode/src/link_lowpower_mode.c:
	* test/e-main/src/e-main.c:
	* test/e-test/src/e-test.c:
	Minor changes. Make them compile.


2014-10-20  Ola Jeppsson  <ola@adapteva.com>
	* apps/dotproduct/run.sh:
	* apps/e-bandwidth-test/test.sh:
	* apps/e-dump-mem/test.sh:
	* apps/e-dump-regs/test.sh:
	* apps/e-fill-mem/test.sh:
	* apps/e-init/test.sh:
	* apps/e-mem-sync/test.sh:
	* apps/eprime/run.sh:
	* apps/erm/run.sh:
	* apps/erm_example/run.sh:
	* apps/fft2d/run.sh:
	* apps/fft2d/test.sh:
	* apps/hello-world/run.sh:
	* apps/matmul-16/run.sh:
	* apps/matmul-16/test.sh:
	* apps/matmul-64/run.sh:
	* apps/shm_test/run.sh:
	* apps/shm_test/test.sh:
	* archive/e-test/e-test:
	* cpu/arithmode/run.sh:
	* cpu/arithmode/test.sh:
	* cpu/assembly/run.sh:
	* cpu/basic_math/run.sh: